--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -14,7 +14,11 @@
 <body>
 	<header>
 		<div id="barrasuperior">
-		<img id="social1"src="img/social.png">	
+		<div id="social1">
+			<img id="liston" src="img/social.png">
+			<img class="social" src="img/fb.jpg" alt="">
+			<img class="social" src="img/yt.jpg" alt="">
+		</div>
 		<div id="menu">
 			<img id="social2"src="img/social.png">
 			<img id="movil" src="img/menum.png">
