youtube and facebook

--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -16,7 +16,7 @@
 		<div id="barrasuperior">
 		<div id="social1">
 			<img id="liston" src="img/social.png">
-			<img class="social" src="img/fb.jpg" alt="">
+			<img class="socia" src="img/fb.jpg" alt="">
 			<img class="social" src="img/yt.jpg" alt="">
 		</div>
 		<div id="menu">
