--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -16,8 +16,8 @@
 		<div id="barrasuperior">
 		<div id="social1">
 			<img id="liston" src="img/social.png">
-			<img class="socia" src="img/fb.jpg" alt="">
-			<img class="social" src="img/yt.jpg" alt="">
+			<img class="facebook" src="img/fb.jpg" alt="">
+			<img class="youtube" src="img/yt.jpg" alt="">
 		</div>
 		<div id="menu">
 			<img id="social2"src="img/social.png">
