--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -20,7 +20,11 @@
 			<img class="youtube" src="img/yt.jpg" alt="">
 		</div>
 		<div id="menu">
-			<img id="social2"src="img/social.png">
+			<div id="social2">
+				<img id="liston" src="img/social.png">
+					<img class="facebook" src="img/fb.jpg" alt="">
+					<img class="youtube" src="img/yt.jpg" alt="">
+		</div>
 			<img id="movil" src="img/menum.png">
 			<nav>
 				<ul>
@@ -48,6 +52,12 @@
 				  		<li><img src="img/colaborador.jpg" alt="">
 				</ul>
 	</header>
+	<div id="info">
+		<img src="img/utilizarla.jpg" alt="">
+		<img src="img/recargar.jpg" alt="">
+		<img src="img/recargar.jpg" alt="">
+		<img src="img/donde.jpg" alt="">
+	</div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
