--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -53,9 +53,9 @@
 				</ul>
 	</header>
 	<div id="info">
-		<img src="img/utilizarla.jpg" alt="">
-		<img src="img/recargar.jpg" alt="">
-		<img src="img/donde.jpg" alt="">
+		<a href="http://faustinoloeza.github.io/como.html"><img src="img/utilizarla.jpg" alt=""></a>
+		<a href="http://faustinoloeza.github.io/recargar.html"><img src="img/recargar.jpg" alt=""></a>
+		<a href="http://faustinoloeza.github.io/donde.html"><img src="img/donde.jpg" alt=""></a>
 	</div>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
 <script>
