--- a/movicun2014/tarjetas.html
+++ b/movicun2014/tarjetas.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#">Tarjetas</a></li>
-					<li><a href="http://faustinoloeza.github.io/beneficios.html">Beneficios</a></li>
+					<li><a href="beneficios.html">Beneficios</a></li>
 					<li><a href="#">Contacto</a></li>
 					<li><a href="#">Ingresa</a></li>
 					<li><input type="text" placeholder=" Dudas..."></li>
@@ -39,25 +39,15 @@
 			</nav>
 		</div>
 		</div>
-		<div id="logo">
-			<figure>
-				<img src="img/logo.png" alt="">
-				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
-			</figure>
-		</div>
-		<ul id="imagenes">
-				  		<li><img src="img/general.jpg" alt="">
-				  		<li><img src="img/terceraedad.jpg" alt="">
-				  		<li><img src="img/estudiante.jpg" alt="">
-				  		<li><img src="img/colaborador.jpg" alt="">
-				</ul>
 	</header>
-	<div id="info">
-		<a href="http://faustinoloeza.github.io/como.html"><img src="img/utilizarla.jpg" alt=""></a>
-		<a href="http://faustinoloeza.github.io/recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="http://faustinoloeza.github.io/donde.html"><img src="img/donde.jpg" alt=""></a>
+	<div id="beneficios">
+		<h3>Beneficios</h3>
+		<h4>Administra tus gastos</h4>
+		<p class="beneficios">Disminuye el majejo de efectivo</p>
+		<p class="beneficios">Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizado tus gastos incluso el de toda tu familia</p>
+		<p class="beneficios">Sera una manera rapida y efectiva de pagar tu pasaje, ya que este sistema agiliza el acceso, ya que este sistema agiliza el acceso, reduciendo la velocidad de cobro hasta un30%.</p>
 	</div>
-	<h3>Beneficios</h3>
+	
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
