--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#">Tarjetas</a></li>
-					<li><a href="http://faustinoloeza.github.io/beneficios.html">Beneficios</a></li>
+					<li><a href="beneficios.html">Beneficios</a></li>
 					<li><a href="#">Contacto</a></li>
 					<li><a href="#">Ingresa</a></li>
 					<li><input type="text" placeholder=" Dudas..."></li>
