--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -55,7 +55,7 @@
 	<div id="info">
 		<a href="http://faustinoloeza.github.io/como.html"><img src="img/utilizarla.jpg" alt=""></a>
 		<a href="http://faustinoloeza.github.io/recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="http://faustinoloeza.github.io/donde.html"><img src="img/donde.jpg" alt=""></a>
+		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
 	</div>
 	<h3>Beneficios</h3>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
