--- a/donde.html
+++ b/donde.html
@@ -42,7 +42,7 @@
 			<article class="comodonde">
 				<p>Dentro de las unidades de transporte urbano Turicun.</p>
 				<p>En centro de emisión ubicado en Av. Chichen Itza	SM.27 Mz.7 L.12 No. 356 esquina con avenida palenque.</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d930.1700126303515!2d-86.83848825042855!3d21.165127447169844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.165007799999998!2d-86.83832609999999!5e0!3m2!1ses-419!2smx!4v1395255250765" width="600" height="450" frameborder="0" style="border:0"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d930.1700126303515!2d-86.83848825042855!3d21.165127447169844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.165007799999998!2d-86.83832609999999!5e0!3m2!1ses-419!2smx!4v1395255250765" frameborder="0" style="border:0"></iframe>
 			</article>
 		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
