--- a/movicun2014/adquirirla.html
+++ b/movicun2014/adquirirla.html
@@ -39,15 +39,13 @@
 			</nav>
 		</div>
 		</div>
-	</header>
-	<div id="beneficios">
-		<h3>Beneficios</h3>
-		<h4>Administra tus gastos</h4>
-		<p class="beneficios">Disminuye el manejo de efectivo.</p>
-		<p class="beneficios">Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizado tus gastos incluso el de toda tu familia.</p>
-		<p class="beneficios">Sera una manera rapida y efectiva de pagar tu pasaje, ya que este sistema agiliza el acceso, ya que este sistema agiliza el acceso, reduciendo la velocidad de cobro hasta un 30%.</p>
-	</div>
-	
+		<div id="dondeA">
+			<img id="DA" src="img/donde-adquirirla.jpg" alt="">
+			<p>Dentro de las unidades de transporte urbano Turicun.</p>
+				<p>En centro de emisión ubicado en Av. Chichen Itza	SM.27 Mz.7 L.12 No. 356 esquina con avenida palenque.</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d930.1700126303515!2d-86.83848825042855!3d21.165127447169844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.165007799999998!2d-86.83832609999999!5e0!3m2!1ses-419!2smx!4v1395255250765" width="600" height="450" frameborder="0"></iframe>
+		</div>
+
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
