--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -16,14 +16,14 @@
 		<div id="barrasuperior">
 		<div id="social1">
 			<img id="liston" src="img/social.png">
-			<img class="facebook" src="img/fb.jpg" alt="">
-			<img class="youtube" src="img/yt.jpg" alt="">
+			<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
 		<div id="menu">
 			<div id="social2">
 				<img id="liston" src="img/social.png">
-					<img class="facebook" src="img/fb.jpg" alt="">
-					<img class="youtube" src="img/yt.jpg" alt="">
+					<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
 			<img id="movil" src="img/menum.png">
 			<nav>
