--- a/movicun2014/beneficios.html
+++ b/movicun2014/beneficios.html
@@ -16,14 +16,14 @@
 		<div id="barrasuperior">
 		<div id="social1">
 			<img id="liston" src="img/social.png">
-			<img class="facebook" src="img/fb.jpg" alt="">
-			<img class="youtube" src="img/yt.jpg" alt="">
+			<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
 		<div id="menu">
 			<div id="social2">
 				<img id="liston" src="img/social.png">
-					<img class="facebook" src="img/fb.jpg" alt="">
-					<img class="youtube" src="img/yt.jpg" alt="">
+					<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
 			<img id="movil" src="img/menum.png">
 			<nav>
@@ -48,7 +48,7 @@
 		<p class="beneficios">Sera una manera rapida y efectiva de pagar tu pasaje, ya que este sistema agiliza el acceso, ya que este sistema agiliza el acceso, reduciendo la velocidad de cobro hasta un 30%.</p>
 	</div>
 	
-	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
+	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
