--- a/movicun2014/adquirirla.html
+++ b/movicun2014/adquirirla.html
@@ -16,14 +16,14 @@
 		<div id="barrasuperior">
 		<div id="social1">
 			<img id="liston" src="img/social.png">
-			<img class="facebook" src="img/fb.jpg" alt="">
-			<img class="youtube" src="img/yt.jpg" alt="">
+			<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
 		<div id="menu">
 			<div id="social2">
 				<img id="liston" src="img/social.png">
-					<img class="facebook" src="img/fb.jpg" alt="">
-					<img class="youtube" src="img/yt.jpg" alt="">
+					<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
 			<img id="movil" src="img/menum.png">
 			<nav>
@@ -46,7 +46,7 @@
 				<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d930.1700126303515!2d-86.83848825042855!3d21.165127447169844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.165007799999998!2d-86.83832609999999!5e0!3m2!1ses-419!2smx!4v1395255250765" width="600" height="450" frameborder="0"></iframe>
 		</div>
 
-	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
+	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
