--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -53,7 +53,7 @@
 				</ul>
 	</header>
 	<div id="info">
-		<a href="http://faustinoloeza.github.io/como.html"><img src="img/utilizarla.jpg" alt=""></a>
+		<a href="usarla.html"><img src="img/utilizarla.jpg" alt=""></a>
 		<a href="http://faustinoloeza.github.io/recargar.html"><img src="img/recargar.jpg" alt=""></a>
 		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
 	</div>
@@ -65,6 +65,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
+
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
