--- a/movicun2014/index.html
+++ b/movicun2014/index.html
@@ -28,7 +28,7 @@
 			<img id="movil" src="img/menum.png">
 			<nav>
 				<ul>
-					<li><a href="index.html" target="_blank">Inicio</a></li>
+					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#">Tarjetas</a></li>
 					<li><a href="beneficios.html">Beneficios</a></li>
 					<li><a href="#">Contacto</a></li>
