--- a/movicun2014/usarla.html
+++ b/movicun2014/usarla.html
@@ -40,7 +40,8 @@
 		</div>
 		</div>
 		<div id="usarla">
-			<img src="img/comousar.png" alt="">
+			<img  id="comousar1" src="img/comousar.png" alt="">
+			<img class="comousar2" src="img/p1.png" alt="">
 		</div>
 
 	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
