--- a/movicun2014/recargar.html
+++ b/movicun2014/recargar.html
@@ -39,24 +39,20 @@
 			</nav>
 		</div>
 		</div>
-		<div id="logo">
-			<figure>
-				<img src="img/logo.png" alt="">
-				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
-			</figure>
+		<div id="dondeA">
+			<img class="DA" src="img/como-recargar.jpg" alt="">
+			<img class="DAM" src="img/como-recargarm.jpg" alt="">
+				<p>Podrás recargarla em cualquiera de los centros de emisión asi como dentro de las unidades de transporte Turicun.</p>
+				<p>Cada vez que la uses el validado emitirá un boleto que te informara tu saldo.</p>
+				<p>Los montos de recarga seran de:</p>
+				<div id="precios">
+					<img src="img/diez.png" alt="">
+					<img src="img/veinte.jpg" alt="">
+					<img src="img/cincuenta.jpg" alt="">
+					<img src="img/cien.jpg" alt="">
+				</div>
 		</div>
-		<ul id="imagenes">
-				  		<li><img src="img/general.jpg" alt="">
-				  		<li><img src="img/terceraedad.jpg" alt="">
-				  		<li><img src="img/estudiante.jpg" alt="">
-				  		<li><img src="img/colaborador.jpg" alt="">
-				</ul>
-	</header>
-	<div id="info">
-		<a href="usarla.html"><img src="img/utilizarla.jpg" alt=""></a>
-		<a href="recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
-	</div>
+
 	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -65,7 +61,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
-
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
