--- a/movicun2014/recargar.html
+++ b/movicun2014/recargar.html
@@ -42,8 +42,8 @@
 		<div id="dondeA">
 			<img class="DA" src="img/como-recargar.jpg" alt="">
 			<img class="DAM" src="img/como-recargarm.jpg" alt="">
-				<p>Podrás recargarla em cualquiera de los centros de emisión asi como dentro de las unidades de transporte Turicun.</p>
-				<p>Cada vez que la uses el validado emitirá un boleto que te informara tu saldo.</p>
+				<p>Podrás recargarla en cualquiera de los centros de emisión asi como dentro de las unidades de transporte Turicun.</p>
+				<p>Cada vez que la uses el validador emitirá un boleto que te informara tu saldo.</p>
 				<p>Los montos de recarga seran de:</p>
 				<div id="precios">
 					<img src="img/diez.png" alt="">
