--- a/movicun2014/contacto.html
+++ b/movicun2014/contacto.html
@@ -39,24 +39,28 @@
 			</nav>
 		</div>
 		</div>
-		<div id="logo">
-			<figure>
-				<img src="img/logo.png" alt="">
-				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
-			</figure>
-		</div>
-		<ul id="imagenes">
-				  		<li><img src="img/general.jpg" alt="">
-				  		<li><img src="img/terceraedad.jpg" alt="">
-				  		<li><img src="img/estudiante.jpg" alt="">
-				  		<li><img src="img/colaborador.jpg" alt="">
-				</ul>
 	</header>
-	<div id="info">
-		<a href="usarla.html"><img src="img/utilizarla.jpg" alt=""></a>
-		<a href="recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
+	<div id="contacto">
+		<h3>Contacto</h3>
+		<form action="contacto.php" method="post">
+			<ul class="contacto">
+				<li>
+					<label for="nombre"><input type="text" placeholder="Nombre"></label>
+				</li>
+				<li>
+					<label for="email"><input type="email" placeholder="E-mail"></label>
+				</li>
+				<li>
+					<label for="asunto"><input type="text" placeholder="Asunto"></label>
+				</li>
+				<li id="mensaje">
+					<label for="mensaje" ></label>
+					<textarea name="mensaje" placeholder="Mensaje"></textarea>
+				</li>
+			</ul>
+		</form>
 	</div>
+	
 	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -65,7 +69,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
-
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
