--- a/movicun2014/adquirirla.html
+++ b/movicun2014/adquirirla.html
@@ -31,7 +31,7 @@
 					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#">Tarjetas</a></li>
 					<li><a href="beneficios.html">Beneficios</a></li>
-					<li><a href="#">Contacto</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
 					<li><a href="#">Ingresa</a></li>
 					<li><input type="text" placeholder=" Dudas..."></li>
 					<li><a href=""><img class="banderas" src="img/eu.png"></a><a href=""><img class="banderas" src="img/mx.png"></a></li>
