--- a/usarla.html
+++ b/usarla.html
@@ -31,7 +31,7 @@
 					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#">Tarjetas</a></li>
 					<li><a href="beneficios.html">Beneficios</a></li>
-					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="#">Contacto</a></li>
 					<li><a href="#">Ingresa</a></li>
 					<li><input type="text" placeholder=" Dudas..."></li>
 					<li><a href=""><img class="banderas" src="img/eu.png"></a><a href=""><img class="banderas" src="img/mx.png"></a></li>
@@ -39,24 +39,11 @@
 			</nav>
 		</div>
 		</div>
-		<div id="logo">
-			<figure>
-				<img src="img/logo.png" alt="">
-				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
-			</figure>
+		<div id="usarla">
+			<img  id="comousar1" src="img/comousar.png" alt="">
+			<img class="comousar2" src="img/p1.png" alt="">
 		</div>
-		<ul id="imagenes">
-				  		<li><img src="img/general.jpg" alt="">
-				  		<li><img src="img/terceraedad.jpg" alt="">
-				  		<li><img src="img/estudiante.jpg" alt="">
-				  		<li><img src="img/colaborador.jpg" alt="">
-				</ul>
-	</header>
-	<div id="info">
-		<a href="usarla.html"><img src="img/utilizarla.jpg" alt=""></a>
-		<a href="recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
-	</div>
+
 	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -65,7 +52,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
-
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
