--- a/adquirirla.html
+++ b/adquirirla.html
@@ -39,24 +39,14 @@
 			</nav>
 		</div>
 		</div>
-		<div id="logo">
-			<figure>
-				<img src="img/logo.png" alt="">
-				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
-			</figure>
+		<div id="dondeA">
+			<img class="DA" src="img/donde-adquirirla.jpg" alt="">
+			<img class="DAM" src="img/donde-adquirirlam.jpg" alt="">
+			<p>Dentro de las unidades de transporte urbano Turicun.</p>
+				<p>En centro de emisión ubicado en Av. Chichen Itza	SM.27 Mz.7 L.12 No. 356 esquina con avenida palenque.</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d930.1700126303515!2d-86.83848825042855!3d21.165127447169844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d21.165007799999998!2d-86.83832609999999!5e0!3m2!1ses-419!2smx!4v1395255250765" width="600" height="450" frameborder="0"></iframe>
 		</div>
-		<ul id="imagenes">
-				  		<li><img src="img/general.jpg" alt="">
-				  		<li><img src="img/terceraedad.jpg" alt="">
-				  		<li><img src="img/estudiante.jpg" alt="">
-				  		<li><img src="img/colaborador.jpg" alt="">
-				</ul>
-	</header>
-	<div id="info">
-		<a href="usarla.html"><img src="img/utilizarla.jpg" alt=""></a>
-		<a href="recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
-	</div>
+
 	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -65,7 +55,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
-
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
