--- a/beneficios.html
+++ b/beneficios.html
@@ -1,71 +1,64 @@
 <!DOCTYPE html>
-<html lang="es">
-	<head>
-		<meta charset="utf-8">
+<html>
+<head>
+	<meta charset="utf-8">
 		<title>Movicun</title>
 		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
-		<link rel="stylesheet"  href="css/estilos.css">
 		<link rel="stylesheet"  href="css/normalize.css">
+		<link rel="stylesheet"  href="css/estilos.css">
 		<!--[if lt IE 9]>
 			<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<!endif]-->
-	</head>
-	<body id="otro">
-		<section id="buscador">
-			<div id="menu">
+		</head>
+<body>
+	<header>
+		<div id="barrasuperior">
+		<div id="social1">
+			<img id="liston" src="img/social.png">
+			<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
 		</div>
-			<a href=""><figure class="banderas">
-				<img  src="img/mexico.png">
-			</figure></a>
-			<a href=""><figure class="banderas">
-				<img  src="img/estadosu.png">
-			</figure></a>
-			<input id="superior"type="text" placeholder="Ingresa tu duda">
-		</section>
-		<header>
+		<div id="menu">
+			<div id="social2">
+				<img id="liston" src="img/social.png">
+					<a href="http://www.webbizarro.com/"><img class="facebook" src="img/fb.jpg" alt=""></a>
+					<a href="http://webmail.turicun.com/"><img class="youtube" src="img/yt.jpg" alt=""></a>
+		</div>
+			<img id="movil" src="img/menum.png">
 			<nav>
 				<ul>
-					<li><a href="index.html">INICIO</a></li>
-					<li><a href="beneficios.html">BENEFICIOS</a></li>
-					<li><a href="preguntas.html">DUDAS</a></li>
-					<li><a href="contacto.html">CONTACTO</a></li>
-					<li><a href="tipos.html">TARJETAS</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="#">Tarjetas</a></li>
+					<li><a href="beneficios.html">Beneficios</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="#">Ingresa</a></li>
+					<li><input type="text" placeholder=" Dudas..."></li>
+					<li><a href=""><img class="banderas" src="img/eu.png"></a><a href=""><img class="banderas" src="img/mx.png"></a></li>
 				</ul>
 			</nav>
-		</header>
-	<figure>
-		<a href="index.html"><img id="logo" src="img/logo.png"></a>
-		<h2 class="bene">Beneficios</h2>
-	</figure>
-		<section class="benefis">
-			<article>
-				<h2>Administra tus gastos</h2>
-				<h4>Disminuye el uso de efectivo</h4>
-				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
-				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
-				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
-				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
-				<figure>
-				<img id="monedas" src="img/coins.png" alt=""/>
-			</figure>
-					<ul class="beneficios">
-						<li>Segura</li>
-						<li>Practica</li>
-						<li>Cobro exacto</li>
-						<li>Sistema Moderno</li>
-						<li>Tarifas preferentes</li>
-						<li>Monitoreo de la velocidad</li>
-						<li>Optimizacón de Transporte</li>
-						<li>Control satelital en nuestras unidades</li>
-						<li>Ubicación del autobus en todo momento</li>
-						<li>Cumplimiento de ruta en tiempo y forma</li>
-						<li>Agilidad al ascenso de la unidad de transporte</li>
-					</ul>
-			</article>
-		</section>
-	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
+		</div>
+		</div>
+	</header>
+	<div id="beneficios">
+		<h3>Beneficios</h3>
+		<h4>Administra tus gastos</h4>
+		<p class="beneficios">Disminuye el manejo de efectivo.</p>
+		<p class="beneficios">Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizado tus gastos incluso el de toda tu familia.</p>
+		<p class="beneficios">Sera una manera rapida y efectiva de pagar tu pasaje, ya que este sistema agiliza el acceso, ya que este sistema agiliza el acceso, reduciendo la velocidad de cobro hasta un 30%.</p>
+	</div>
+	
+	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
+  ga('send', 'pageview');
+</script>
 		<script src="js/jquery.js"></script>
+		<script src="js/jquery.roundabout.js"></script>
+		<script src="js/jquery.roundabout-shapes.js"></script>
 		<script src="js/funciones.js"></script>
-	</body>
+</body>
 </html>
