--- a/ingresa.html
+++ b/ingresa.html
@@ -32,30 +32,48 @@
 					<li><a href="#">Tarjetas</a></li>
 					<li><a href="beneficios.html">Beneficios</a></li>
 					<li><a href="contacto.html">Contacto</a></li>
-					<li><a href="ingresa.html">Ingresa</a></li>
+					<li><a href="#">Ingresa</a></li>
 					<li><input type="text" placeholder=" Dudas..."></li>
 					<li><a href=""><img class="banderas" src="img/eu.png"></a><a href=""><img class="banderas" src="img/mx.png"></a></li>
 				</ul>
 			</nav>
 		</div>
 		</div>
-		<div id="logo">
-			<figure>
-				<img src="img/logo.png" alt="">
-				<h2>La nueva tarjeta prepago de transporte urbano.</h2>
-			</figure>
-		</div>
-		<ul id="imagenes">
-				  		<li><img src="img/general.jpg" alt="">
-				  		<li><img src="img/terceraedad.jpg" alt="">
-				  		<li><img src="img/estudiante.jpg" alt="">
-				  		<li><img src="img/colaborador.jpg" alt="">
-				</ul>
 	</header>
-	<div id="info">
-		<a href="usarla.html"><img src="img/utilizarla.jpg" alt=""></a>
-		<a href="recargar.html"><img src="img/recargar.jpg" alt=""></a>
-		<a href="adquirirla.html"><img src="img/donde.jpg" alt=""></a>
+	<div id="contacto">
+		<h3>Ingresa</h3>
+		<form action="ingreso.php" method="post">
+			<ul class="contacto">
+				<li>
+					<label for="nombre"><input type="text" placeholder="Nombre"></label>
+				</li>
+				<li>
+					<label for="pass"><input type="password" placeholder="Contraseña"></label>
+				</li>	
+			</ul>
+		</form>
+	</div>
+	<div id="contacto">
+		<h2 class="black">Registrate</h2>
+		<form action="registro.php" method="post">
+			<ul class="contacto">
+				<li>
+					<label for="nombre"><input type="text" placeholder="Nombre"></label>
+				</li>
+				<li>
+					<label for="tarjeta"><input type="text" placeholder="No. de Tarjeta"></label>
+				</li>
+				<li>
+					<label for="password"><input type="password" placeholder="Contraseña"></label>
+				</li>
+				<li>
+					<label for="password"><input type="password" placeholder="Repite contraseña"></label>
+				</li>
+				<li>
+					<label for="email"><input type="email" placeholder="E-mail"></label>
+				</li>	
+			</ul>
+		</form>
 	</div>
 	<footer><h5>Movicun 2014, Cancún Quintana Roo, México.</h5></footer>
 <script>
@@ -65,7 +83,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-48396479-1','faustinoloeza.github.io');
   ga('send', 'pageview');
 </script>
-
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.roundabout.js"></script>
 		<script src="js/jquery.roundabout-shapes.js"></script>
