--- a/manual/demo/demo.html
+++ b/manual/demo/demo.html
@@ -31,7 +31,7 @@
       <ul class="rslides" id="slider4">
         <li>
           <img src="img/1.png" alt="">
-          <p class="caption">Al entrar en la pagina esta es la primera pantalla que se muestra. Para poder ver el contenido se requiere estar loguado en la pagina para ello procedemos primero a registarnos.</p>
+          <p class="caption">Al entrar a la pagina esta es la primera ventana que se muestra, para poder ver el contenido de la pagina se necesita tener usuario y contraseña para ello el primer paso es registrarse.-Damos click en la palabra registrarse.</p>
         </li>
         <li>
           <img src="img/2.png" alt="">
