--- a/manual/demo/demo.html
+++ b/manual/demo/demo.html
@@ -35,7 +35,12 @@
         </li>
         <li>
           <img src="img/2.png" alt="">
-          <p class="caption"></p>
+          <p class="caption">A continuacion aparece esta ventana, tienes que rellenar los campos con los datos que se te piden:
+          -Nombre de usuario(Con este podras entrar a la pagina.)
+          -Correo electronico(De la empresa)
+          -Contraseña(Repitela dos veces)
+          -Al completar el formulario con todos los datos proseguimos a dar click en el boton de Registrarse.
+          Si falla el registro se debe a que algun dato esta mal proporcionado</p>
         </li>
         <li>
           <img src="img/3.png" alt="">
