--- a/inquidiox/index.html
+++ b/inquidiox/index.html
@@ -6,8 +6,6 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/index.css">
-	<script src="js/jquery.js"></script>
-	<script src="js/faustino.js"></script>
 </head>
 <body>
 	<div id="main">
@@ -22,15 +20,20 @@
 			</nav>
 		</header>
 		<div id="inicio">
-			<img src="img/OMBRE.png" alt="" class="home">
+			<ul class="rslides">
+			  <li><img src="img/OMBRE.png" alt=""></li>
+			  <li><img src="img/3.png" alt=""></li>
+			  <li><img src="img/8.png" alt=""></li>
+			</ul>
 		</div>
 		<div class="comun" id="servicio">
 			<h2>SERVICIOS</h2>
-			<ul>
-				<li>RED</li>
-				<li>BLUE</li>
-				<li>YELLOW</li>
-			</ul>
+				<img src="img/01.png" alt="">
+				<img src="img/02.png" alt="">
+				<img src="img/03.png" alt="">
+				<img src="img/04.png" alt="">
+				<img src="img/05.png" alt="">
+				<img src="img/06.png" alt="">
 		</div>
 		<div id="promociones" class="comun">
 			<h2>PROMOCIONES</h2>
@@ -44,14 +47,27 @@
 				<li>Correo: <input type="text"></li>
 				<li>Duda: <input type="text"></li>
 				<li><input type="submit"></li>
-				<li>TEL:8827064</li>
-				<li>CEL:9985937316</li>
-				<li>FACEBOOK/h20</li>
-				<li>E-MAIL:h20@gmail.com</li>
+				<li>TEL:2562755</li>
+				<li>FACEBOOK/inquidiox</li>
+				<li>inquidiox@hotmail.com</li>
 			</ul>
 		</form>
 	</section>
 	<footer>H20 2014</footer>
 	</div>
+	<script src="js/jquery.js"></script>
+
+	<script src="js/responsiveslides.min.js"></script>
+	<script>
+		  $(function() {
+		    $(".rslides").responsiveSlides({
+		        auto: true,
+		        speed: 400,
+		        timeout: 1000
+		      });
+		  });
+
+</script>
+	</script>
 </body>
 </html>
