--- a/inquidiox/index.html
+++ b/inquidiox/index.html
@@ -36,8 +36,8 @@
 				<img src="img/06.png" alt="">
 		</div>
 		<div id="promociones" class="comun">
-			<h2>PROMOCIONES</h2>
-			<p>Backend, frontend, diseño, UX, usabilidad, posicionamiento, estrategia, arquitectura y muchos otros términos componen el diseño y desarrollo web moderno. Lejos está la época donde un webmasterhacía todo el trabajo. Ahora es imposible crear un producto completo sin por lo menos un diseñador, un front y un back. A menos que seas un genio cuyos padres fueron asesinados, juraste venganza, estudiaste cinco años en un templo samurai de la W3C, destruiste el templo y volviste para cambiar el mundo. Con aplicaciones web.</p>
+			<h2>Quines Somos</h2>
+			<p>Somos una organización  dedicada al desarrollo del dioxido de cloro y consistimos en el servicio al  mantenimiento del agua de su empresa con nuestra maquinaria y conocimiento, esto ayudara a darle mejor productividad y calidad al propocrcionarle nuestro apoyo.</p>
 			<img src="img/matraz.png" alt="">
 		</div>
 		<section id="contacto" class="comun">
@@ -49,9 +49,11 @@
 				<li><input type="submit"></li>
 				<li>TEL:2562755</li>
 				<li>FACEBOOK/inquidiox</li>
+				<li>Dirección: 34 poniente no 304 mz 8 lt 21 sm 71 cp 77510</li>
 				<li>inquidiox@hotmail.com</li>
 			</ul>
 		</form>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14883.416025664761!2d-86.8379416389648!3d21.15820753514993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1406248373100" width="600" height="450" frameborder="0" style="border:0"></iframe>
 	</section>
 	<footer>H20 2014</footer>
 	</div>
@@ -63,7 +65,7 @@
 		    $(".rslides").responsiveSlides({
 		        auto: true,
 		        speed: 400,
-		        timeout: 1000
+		        timeout: 2000
 		      });
 		  });
 
