nuevo fondo mov

--- a/inquidiox/index.html
+++ b/inquidiox/index.html
@@ -11,12 +11,13 @@
 	<div id="main">
 		<header>
 			<nav>
-				<ul>
+				<ul class="navegacion">
 					<li><a href="">INICIO</a></li>
 					<li><a href="">SERVICIO</a></li>
+					<img src="img/inquidiox.png" alt="">
 					<li><a href="">PROMOCIONES</a></li>
 					<li><a href="">CONTACTO</a></li>
-				</ul>
+				</ul> 
 			</nav>
 		</header>
 		<div id="inicio">
@@ -39,6 +40,18 @@
 			<h2>Quines Somos</h2>
 			<p>Somos una organización  dedicada al desarrollo del dioxido de cloro y consistimos en el servicio al  mantenimiento del agua de su empresa con nuestra maquinaria y conocimiento, esto ayudara a darle mejor productividad y calidad al propocrcionarle nuestro apoyo.</p>
 			<img src="img/matraz.png" alt="">
+		</div>
+		<div id="caracteristicas" class="comun">
+			<h2>Caracteristicas</h2>
+			<li>Biodegradables</li>
+			<li>Controla Olores</li>
+			<li>Mas eficaz que el cloro</li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
 		</div>
 		<section id="contacto" class="comun">
 		<h2>CONTACTO</h2>
